// ============================================================
// schema.prisma — データベーススキーマの Single Source of Truth
//
// スキーマを変更した後は必ず以下を実行すること（手書き SQL は禁止）:
//   1. pnpm db:migrate:dev --name <変更内容>  → migration.sql 自動生成 + DB 反映
//   2. pnpm db:docs                           → Prisma Client + DBML 自動更新
//
// 詳細手順: README.md「DB スキーマの変更手順」参照
// ============================================================

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider   = "prisma-dbml-generator"
  output     = "../../../docs/database"
  outputName = "schema.dbml"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

// ユーザーロール
enum UserRole {
  ADMIN
  USER
  GUEST
}

// ユーザーステータス
enum UserStatus {
  ACTIVE
  INACTIVE
}

// ユーザー（認証アカウント）
model UserList {
  userId    String       @id @db.VarChar(255) @map("userId")
  userName  String       @db.VarChar(255) @map("userName")
  email     String?      @unique @db.VarChar(255) @map("email")
  password  String       @db.VarChar(255) @map("password")
  role      UserRole     @default(USER) @map("role")
  status    UserStatus   @default(ACTIVE) @map("status")
  createdAt DateTime     @default(now()) @db.DateTime(6) @map("created_at")
  updatedAt DateTime     @updatedAt @db.DateTime(6) @map("updated_at")
  budgets   BudgetList[]

  @@map("user_list")
}

// 支出・収入レコード（balanceType: 0=支出, 1=収入）
model BudgetList {
  id          String    @id @db.VarChar(255)
  amount      Int
  balanceType Int       @map("balanceType")
  userId      String    @db.VarChar(255) @map("userId")
  categoryId  Int       @default(1) @map("categoryId")
  content     String?   @db.VarChar(255)
  date        String    @db.VarChar(255)
  createdDate DateTime  @default(now()) @db.DateTime(6) @map("createdDate")
  updatedDate DateTime  @updatedAt @db.DateTime(6) @map("updatedDate")
  deletedDate DateTime? @db.DateTime(6) @map("deletedDate")
  user        UserList  @relation(fields: [userId], references: [userId], onDelete: Cascade)

  @@map("budget_list")
}

// JWT リフレッシュトークン
model RefreshToken {
  id        String    @id @db.VarChar(26)
  tokenHash String    @unique @db.VarChar(64) @map("token_hash")
  userId    String    @db.VarChar(255) @map("user_id")
  expiresAt DateTime  @db.DateTime @map("expires_at")
  revokedAt DateTime? @db.DateTime @map("revoked_at")
  createdAt DateTime  @default(now()) @db.DateTime(6) @map("created_at")

  @@index([userId], map: "IDX_refresh_tokens_user_id")
  @@map("refresh_tokens")
}

// パスワードリカバリ用「秘密の質問」プリセット
model SecurityQuestionPreset {
  id       Int                    @id @default(autoincrement())
  text     String                 @db.VarChar(255)
  answers  UserSecurityAnswer[]

  @@map("security_question_presets")
}

// ユーザーが選択した秘密の質問と回答（bcryptハッシュ）
model UserSecurityAnswer {
  id         String                 @id @db.VarChar(26)
  userId     String                 @unique @db.VarChar(255) @map("user_id")
  questionId Int                    @map("question_id")
  answerHash String                 @db.VarChar(255) @map("answer_hash")
  createdAt  DateTime               @default(now()) @db.DateTime(6) @map("created_at")
  updatedAt  DateTime               @updatedAt @db.DateTime(6) @map("updated_at")
  question   SecurityQuestionPreset @relation(fields: [questionId], references: [id])

  @@index([userId], map: "IDX_user_security_answers_user_id")
  @@map("user_security_answers")
}

// ユーザー設定（総資産・月次収入・給料日・固定費）
model UserSettings {
  id             String   @id @db.VarChar(26)
  userId         String   @unique @db.VarChar(255) @map("user_id")
  totalAssets    Int      @default(0) @map("total_assets")
  monthlyIncome  Int      @default(0) @map("monthly_income")
  paydayDay      Int      @default(25) @map("payday_day")
  fixedExpenses  Int      @default(0) @map("fixed_expenses")
  createdAt      DateTime @default(now()) @db.DateTime(6) @map("created_at")
  updatedAt      DateTime @updatedAt @db.DateTime(6) @map("updated_at")

  @@index([userId], map: "IDX_user_settings_user_id")
  @@map("user_settings")
}

// パスワードリセット用一時トークン
model PasswordResetToken {
  id        String    @id @db.VarChar(26)
  tokenHash String    @unique @db.VarChar(64) @map("token_hash")
  userId    String    @db.VarChar(255) @map("user_id")
  expiresAt DateTime  @db.DateTime @map("expires_at")
  usedAt    DateTime? @db.DateTime @map("used_at")
  createdAt DateTime  @default(now()) @db.DateTime(6) @map("created_at")

  @@index([userId], map: "IDX_password_reset_tokens_user_id")
  @@map("password_reset_tokens")
}

// LLM 使用ログ（使用制限チェック・コスト管理用）
model LlmUsage {
  id           String   @id @db.VarChar(26)
  userId       String   @db.VarChar(255) @map("user_id")
  feature      String   @db.VarChar(50)         // "report_analysis" | "expense_parse"
  inputTokens  Int      @map("input_tokens")
  outputTokens Int      @map("output_tokens")
  createdAt    DateTime @default(now()) @db.DateTime(6) @map("created_at")

  @@index([userId, feature, createdAt], map: "IDX_llm_usage_user_feature_created")
  @@map("llm_usage")
}
